Added Taks and also aded event Listerners, Added callback fucnitons to signup and login js instread of setInterval()

--- a/login.html
+++ b/login.html
@@ -24,5 +24,6 @@
         <p>Don't have an account? <a href="signup.html">Sign up</a></p>
     </div>
     <script src="scripts/login.js" type="module"></script>
+    <!-- <script src="scripts/backend.js"></scripts> -->
 </body>
 </html>
