--- a/app/tasks.html
+++ b/app/tasks.html
@@ -4,8 +4,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tasks</title>
+  <link rel="stylesheet" href="../styles/tasks.css">
 </head>
 <body>
-  
+  <div class="container">
+    <button id="logout">Logout</button>
+    <div class="welcome-message" id="welcome-message">Welcome, User!</div>
+    <div class="notification"></div>
+    <header>
+      <h1>To-Do List</h1>
+    </header>
+    <main>
+      <div class="input-container">
+        <input type="text" id="new-task" placeholder="Add a new task...">
+        <button id="add-task-btn">Add</button>
+      </div>
+ 
+      <section id="user-tasks">
+        <h2 class="js-headline-user-tasks">Your Tasks</h2>
+        <ol id="user-task-list">
+          <!-- User tasks will be added here dynamically -->
+         
+        </ol>
+      </section>
+    </main>
+  </div>
+  <script src="../scripts//tasks.js"></script>
 </body>
 </html>
+
+
+<!-- <li>
+  <input type="checkbox" class="task-checkbox">
+  <span class="task-text">Sample Task</span>
+  <button class="delete">Delete</button>
+</li> -->
+
+
+<!-- <ul id="task-list">
+  Tasks will be added here dynamically
+</ul> -->
